php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #29034 wordwrap() returns boolean when given an empty string
Submitted: 2004-07-06 18:59 UTC Modified: 2004-07-07 00:17 UTC
From: michaels at crye-leike dot com Assigned:
Status: Closed Package: Unknown/Other Function
PHP Version: 4.3.7 OS: Linux
Private report: No CVE-ID: None
 [2004-07-06 18:59 UTC] michaels at crye-leike dot com
Description:
------------
The wordwrap() function returns a boolean when given an empty string as the first parameter.  If the string is not empty, a string is returned as indicated by the documentation.

Reproduce code:
---------------
print gettype(wordwrap(''))."\n";

Expected result:
----------------
string

Actual result:
--------------
boolean

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-07-07 00:17 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC