Fixed bug #29034 (wordwrap() returns a boolean when passed empty string).